--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "android.mdzyuba.popularmovies"
+        applicationId "com.mdzyuba.popularmovies"
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
@@ -29,6 +29,7 @@ dependencies {
     // Picasso is using appcompat-v7:27.1.0. so we need to use the same.
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.hamcrest:hamcrest:2.1'
     testImplementation 'org.robolectric:robolectric:4.2'
