Fixed back button / nav up issue.
The nav up button was creating a new instance of the MainActivity, while clicking the back button did not.

The suggestion was found here:
https://stackoverflow.com/questions/15559838/actionbar-up-navigation-recreates-parent-activity-instead-of-onresume/21779009#21779009

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DarkAppTheme">
-        <activity android:name=".MovieDetailsActivity"
-            android:label="@string/movie_detail_activity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MovieDetailsActivity"
+            android:label="@string/movie_detail_activity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
